Fix footer overlap on tech page

--- a/src/assets/styles/pages/main/_technology.scss
+++ b/src/assets/styles/pages/main/_technology.scss
@@ -2,8 +2,7 @@
   padding: 100px 50px;
 
   &__content-container {
-    min-height: 83vh;
-    max-height: 83vh;
+    height: 83vh;
     max-width: 100vw;
     display: grid;
     grid-template-rows: 1fr 100px;
